demo/deloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-dep
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      myapp: demo
  template:
    metadata:
      name: tem-demo
      labels:
        myapp: demo
    spec:
      containers:
      - name: nginx
        image: nginx:1.15
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 200M 
          limits:
            cpu: 500
            memory: 500M
        volumeMounts:
        - name: volume-demo
          mountPath: /usr/share/nginx/html
        ports:
        - name: http
          containerPort: 80
      volumes:
      - name: volume-demo
        persistentVolumeClaim:
          claimName: pvc-demo
