demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-demo
  namespace: default
spec:
  type: NodePort
  selector:
    myapp: demo
  ports:
  - name: http
    targetPort: 80
    port: 80
    nodePort: 30080
